<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">愛麗絲夢遊仙境 – 地洞冒險</string>
    <string name="facebook_app_id">1682812001970032</string>
    <string name="content_description"></string>
    <string name="introduction">遊戲介紹</string>
    <string name="home_title1">愛麗絲夢遊仙境</string>
    <string name="home_title2">地洞冒險(上)</string>
    <string name="start">Start</string>
    <string name="go">Go</string>
    <string name="success">恭喜成功闖關!!</string>
    <string name="next">進入下一關</string>
    <string name="try_again">Sorry! 再試試看!</string>
    <string name="input_again">再輸入一次</string>
    <string name="session1_title0">1–1</string>
    <string name="session1_title1">關卡一：</string>
    <string name="session1_title2">遺失懷錶的白兔先生</string>
    <string name="session2_title0">1–2</string>
    <string name="session2_title1">關卡二：</string>
    <string name="session2_title2">帽子先生的名片</string>
    <string name="session3_title0">1–3</string>
    <string name="session3_title1">關卡三：</string>
    <string name="session3_title2">下午茶中的彩色蛋糕</string>
    <string name="session4_title0">1–4</string>
    <string name="session4_title1">關卡四：</string>
    <string name="session4_title2">轉來轉去的地圖</string>
    <string name="pass_word">解鎖密碼</string>
    <string name="key">Key</string>
    <string name="login">登入</string>
    <string name="skip">略過</string>
    <string name="clock">00:00:00</string>
    <string name="title">標題</string>
    <string name="message">訊息</string>
    <string name="error">錯誤</string>
    <string name="network_error">目前網路異常無法連線</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="attention">注意</string>
    <string name="gameover">遊戲結束</string>
    <string name="finish_bar">通關時間：00:00:00</string>
    <string name="ending_title">愛麗絲成功找到兔子了!</string>
    <string name="bt_select">選擇藍芽裝置</string>
    <string name="toy01">Toy01</string>
    <string name="toy02">Toy02</string>
    <string name="toy03">Toy03</string>
    <string name="toy04">Toy04</string>
    <string name="toy05">Toy05</string>
    <string name="share_content">趕緊和可愛的兔子\n拍照留念分享吧!</string>
    <string name="story_content">愛麗絲是位想像力極豐富的女孩，她相信有個屬於自己的世界，在這個世界中，各種動物與植物都可以像人類一般地說話。一天，愛麗絲與姐姐在家園休息看書的時候，在附近遇見一隻匆忙的白兔子，她緊跟著過去不小心掉進未知的地洞世界，在那裡愛麗絲遇見很多奇特的生物。最後，愛麗絲闖進女王Queen的庭院，後來被女王的黑桃兵團追趕，愛麗絲不停地逃跑想逃離地洞，整個歷程將是超脫常人的冒險經歷。</string>
    <string name="session1_content">一天，悶悶不樂的愛麗絲跟姊姊同坐於河畔。忽見一隻古怪的白兔走過，牠穿戴打扮非常特別，自言自語、行色匆匆，在走的過程當中還不小心把口袋內的三個懷錶掉在一棵樹洞旁，白兔霎那間跳進了樹洞。好心的愛麗絲趕緊追了過去，想把懷錶撿起來還給白兔先生，卻發現樹洞旁原來還有更多個懷錶，她只好憑著記憶把三種不同顏色、不同厚度的懷錶找出來。找到後愛麗絲也跳進了樹洞，這個洞簡直是個無底深淵！過了很久，愛麗絲終於著地。</string>
    <string name="session2_content">她驚覺自己身處奇怪的餐廳門外，而這個入口有好多隻動物正在排隊用膳，愛麗絲猜想白兔先生一定也排隊進餐廳了，當愛麗絲也想排隊進去的時候，卻被門外的一隻名叫阿河的河馬接待人員給擋了下來，原來這次的下午茶饗宴是要有餐廳主人帽子先生的名片才可以入餐的。河馬阿河也不想太為難愛麗絲，給了他三張卡片，並告訴愛麗絲如果能從這三張卡片找到帽子先生的本名，就願意將帽子先生的名片給於愛麗絲，這名片可以讓她成為此茶會的座上嘉賓。</string>
    <string name="session3_content">花了好長的時間，愛麗絲解開這三張卡片謎題，也順利拿到帽子先生的名片準備排隊跟著用膳。愛麗絲拿著名片給帽子先生看，帽子先生看到名片後非常興奮的說：「只要有這張名片就是我的貴賓！」並邀請愛麗絲一起參加茶會。茶會上有漂亮的茶具組，精美的蛋糕和餅乾，當愛麗絲拿了一塊蛋糕正要將叉子剖開蛋糕時，被帽子先生阻止了，帽子先生說：「在這裡吃蛋糕要遵守我們的規則，你看這個是三層蛋糕，每層都有不同顏色，你必須從最上層開始，一層一層往下吃，才能品嘗到這個蛋糕的美味。」愛麗絲覺得很困惑，但還是照著帽子先生的方法做了，愛麗絲吃著蛋糕，才發現每一層的上面都藏有秘密，必須一層一層吃掉才能看到呀！</string>
    <string name="session4_content">愛麗絲跟帽子先生邊吃著午茶邊聊著天，帽子先生問說：「愛麗絲你怎麼看起來這麼煩惱，到底在煩惱什麼呢？」愛麗絲回答說：「我在找兔子先生，想要把懷錶還給他」帽子先生一聽完愛麗絲的煩惱，馬上跑到旁邊的櫃子東翻西找，找到一張紙拿給了愛麗絲。帽子先生給了艾莉絲一張充滿奇怪形狀的地圖，和一塊有許多小洞的木尺。帽子先生告訴艾莉絲：「先將地圖與木尺疊在一起，找到１開始的位置。木尺順時鐘轉９０度，地圖順時針轉１８０度，再往右上角靠上去，就可以找到地圖中第一個秘密。再來回到１開始的位置，木尺順時鐘轉１８０度，地圖順時針轉９０度，再往右下角靠上去，便可以找到地圖中第二個秘密。最後再回到１開始的位置，木尺左右反轉，將會從中發現通往城堡的道路，而這個城堡就是白兔匆忙趕路的目的地。」終於，依照著地圖的指示，愛麗絲找到了城堡也看到白兔先生，只不過白兔先生雖然不在匆忙，但表情卻是顯得特別緊張與害怕，愛麗絲上前走了過去想還牠懷錶，也很想知道牠這麼匆忙又害怕的原因。</string>

</resources>