<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/textViewStoryTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textViewStoryTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />

    <ScrollView
        android:id="@+id/scrollViewStoryContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/paper2"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="8dp"
        android:paddingTop="35dp"
        android:scrollIndicators="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textViewStoryContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonStoryStart"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_button"
        android:drawableStart="@drawable/ic_launcher"
        android:text="@string/go"
        android:textColor="@color/Orange_Deep"
        android:textStyle="bold" />

</LinearLayout>