<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutSession3Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password1_3"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/textViewSession3Title0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session3_title0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewSession3Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session3_title2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewSession3Content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/story1_3_w"
            android:paddingBottom="130dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingTop="130dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/session3_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageViewSession3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/story1_3" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonSession3Key"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/lock"
        android:textColor="@color/Orange_Deep"
        android:visibility="visible" />

</LinearLayout>