<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pass"
    android:contentDescription="@string/content_description" >

    <LinearLayout
        android:id="@+id/linearLayoutEndingHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewEndingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="48sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewEndingShare"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/content_description"
        android:scaleType="centerInside"
        android:src="@drawable/camera2" />

    <TextView
        android:id="@+id/textViewShareDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewEndingShare"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/share_dialog"
        android:padding="20dp"
        android:text="@string/share_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageViewEndingHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/home_icon" />

</RelativeLayout>